Custom Grignote font

--- a/grignote.css
+++ b/grignote.css
@@ -21,6 +21,17 @@
     color: #fff !important;
 }
 
+@font-face {
+    font-family: gricanard;
+    src: url('gricanard.ttf');
+}
+
+.grignoteTitle {
+  font-family: gricanard;
+  font-size: 23pt;
+  font-kerning: 10pt;
+}
+
 /*@media (max-width: 600px) {
     .carousel-caption {
         display: none; /* Hide the carousel text when the screen is less than 600 pixels wide 
