Avoid logo to have transparency effect

--- a/grignote.css
+++ b/grignote.css
@@ -1,7 +1,7 @@
 /* Add a dark background color with a little bit see-through */ 
 .navbar {
     margin-bottom: 0;
-    opacity:0.9;
+    background-color: rgba(255,255,255,0.9);
 }
 
 .carousel-inner img {
