Make badges adhere to color chart

--- a/grignote.css
+++ b/grignote.css
@@ -64,6 +64,11 @@
   color: #ead7c8;
 }
 
+.badge {
+  background-color: #ead7c8;
+  color: #291a0f;
+}
+
 .grignoteBackground {
   color: #291a0f;
 }
