--- a/grignote.css
+++ b/grignote.css
@@ -77,6 +77,9 @@
   border-color: #291a0f;
 }
 
+.grignoteMarketingImg {
+  width: 50%; /* temporary size down until we pick the images they want*/
+}
 /*@media (max-width: 600px) {
     .carousel-caption {
         display: none; /* Hide the carousel text when the screen is less than 600 pixels wide 
